--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
         placeholder="Paste video URL here"
       />
       <br />
-      <a id="detail-button-a" href="Download_page.html"
-        ><button id="detail-button" class="noto-sans-mongolian-regular">
-          Fetch Details
-        </button></a
-      >
+      <button id="detail-button" class="noto-sans-mongolian-regular">
+        Fetch Details
+      </button>
     </div>
   </body>
 </html>
