--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <script src="script.js" defer></script>
+    <!-- Only one script tag -->
   </head>
   <body>
     <div id="main-div">
