--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>You Download</title>
     <link
       rel="stylesheet"
-      href="/My Projects/Tools/Youtube video Downloader/style.css"
+      href="style.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +17,7 @@
     <script src="script.js" defer></script>
     <!-- Only one script tag -->
   </head>
-  <body>
+  <body id="index-page">
     <div id="main-div">
       <h1 id="header" class="noto-sans-mongolian-regular">
         Download YouTube Videos
