--- a/Download_page.html
+++ b/Download_page.html
@@ -6,7 +6,7 @@
     <title>You Download</title>
     <link
       rel="stylesheet"
-      href="/My Projects/Tools/Youtube video Downloader/style.css"
+      href="style.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body id="download-page">
     <div id="main-div">
       <h1 id="header" class="noto-sans-mongolian-regular">
         Download YouTube Videos
